testdata/zkc/invalid/basic_invalid_02.zkc
;;error:2:28-29:variable already declared
function f(x:u8) -> (r:u8, r:u8) {
  r = 0
  return
}
